--- a/CGLab1/CGLab1.csproj
+++ b/CGLab1/CGLab1.csproj
@@ -50,6 +50,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Components\MainWindow.cs" />
+    <Compile Include="PrimitivesDrawer.cs" />
+    <Compile Include="PendulumDrawer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PointExtensions.cs" />
